--- a/package.json
+++ b/package.json
@@ -24,12 +24,14 @@
     "eslint": "^8.2.0",
     "eslint-config-airbnb": "19.0.4",
     "eslint-config-airbnb-typescript": "16.1.0",
+    "eslint-config-prettier": "^8.4.0",
     "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
     "parcel": "^2.2.1",
     "postcss": "^8.4.5",
+    "prettier": "^2.5.1",
     "sharp": "^0.29.1",
     "tailwindcss": "^3.0.15",
     "typescript": "^4.5.4"
